--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "starter-project",
+  "homepage": "https://musikavanhu.github.io/starter-project/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
